add clear inventory button

--- a/src/app/ui-components/backpack/backpack.component.html
+++ b/src/app/ui-components/backpack/backpack.component.html
@@ -44,5 +44,7 @@
         <div class="no-items">No potions brewed yet</div>
       </ng-template>
     </div>
+
+    <button (click)="clearInventory()">Clear inventory</button>
   </div>
 </div>
