--- a/src/app/pages/plant-page/plant-page.component.scss
+++ b/src/app/pages/plant-page/plant-page.component.scss
@@ -8,19 +8,18 @@
   margin: 0;
 }
 
+.plant-image {
+  width: 150px;
+  height: auto;
+  padding-block: $padding-small;
+}
+
 .title {
   text-align: center;
   font-size: 1.2rem;
   font-weight: bold;
   font-family: "MedievalSharp"; /* Fallback if one fails */
   color: #4b3f3c; /* Dark brown ink color */
-}
-
-.book-content {
-  position: relative;
-  top: 2%;
-  width: 45%;
-  height: 65%;
 }
 
 .content {
@@ -31,13 +30,31 @@
   color: #4b3f3c; /* Dark brown ink color */
 }
 
-.plant-image {
-  width: 150px;
-  height: auto;
+.plant-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+  margin-top: 1rem;
+  .effect {
+    grid-column: 1;
+    grid-row: 1;
+  }
+  .biome {
+    grid-column: 2;
+    grid-row: 1;
+  }
+  .recipes {
+    grid-column: 1;
+    grid-row: 2;
+  }
+  .appearance {
+    grid-column: 2;
+    grid-row: 2;
+  }
 }
 
-.plant-info {
-  display: flex;
-  gap: 1rem;
-  padding: $padding-medium;
+h3 {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  font-size: 1.2rem;
 }
