add drinkable directive but don't use it yet

--- a/src/app/ui-components/backpack/backpack.component.html
+++ b/src/app/ui-components/backpack/backpack.component.html
@@ -45,6 +45,6 @@
       </ng-template>
     </div>
 
-    <button (click)="clearInventory()">Clear inventory</button>
+    <!-- <button (click)="clearInventory()">Clear inventory</button> -->
   </div>
 </div>
