add sort buttons for display plants and recipes and add about modal

--- a/src/app/display-recipes/display-recipes.component.html
+++ b/src/app/display-recipes/display-recipes.component.html
@@ -2,11 +2,11 @@
   <thead>
     <tr>
       <th>Image</th>
-      <th>Name</th>
+      <th><app-sortable-header header="Name"></app-sortable-header></th>
       <th>Ingredients</th>
-      <th>Effect</th>
-      <th>Strength</th>
-      <th>Craftable</th>
+      <th><app-sortable-header header="Effect"></app-sortable-header></th>
+      <th><app-sortable-header header="Strength"></app-sortable-header></th>
+      <th><app-sortable-header header="Craftable"></app-sortable-header></th>
     </tr>
   </thead>
   <tbody>
