--- a/src/app/gather-herbs/gather-herbs.component.html
+++ b/src/app/gather-herbs/gather-herbs.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form" class="herbalist-form">
   <!-- Input Field for Roll -->
   <div class="form-group">
-    <label for="roll">Roll:</label>
+    <label for="roll">Nature Roll</label>
     <input
       id="roll"
       type="number"
