--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -66,3 +66,14 @@
   max-width: 800px;
   margin: 0 auto;
 }
+
+.header {
+  position: relative;
+}
+
+.about-link {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  cursor: pointer;
+}
