--- a/src/app/pages/plant-page/plant-page.component.html
+++ b/src/app/pages/plant-page/plant-page.component.html
@@ -39,5 +39,11 @@
         {{ plant.appearance }}
       </div>
     </div>
+    <div>
+      <button (click)="addPlant()" class="plant-btn">Add Plant</button>
+    </div>
+    <div>
+      <button (click)="removePlant()" class="plant-btn">Remove Plant</button>
+    </div>
   </div>
 </div>
