--- a/src/app/display-plants/display-plants.component.html
+++ b/src/app/display-plants/display-plants.component.html
@@ -2,14 +2,14 @@
   <thead>
     <tr>
       <th>Image</th>
-      <th>Name</th>
-      <th>Appearance</th>
-      <th>Rarity</th>
-      <th>Biome</th>
+      <th><app-sortable-header header="Name"></app-sortable-header></th>
+      <th><app-sortable-header header="Appearance"></app-sortable-header></th>
+      <th><app-sortable-header header="Rarity"></app-sortable-header></th>
+      <th><app-sortable-header header="Biome"></app-sortable-header></th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let plant of plants(); let i = index">
+    <tr *ngFor="let plant of sortedPlants(); let i = index">
       <td>
         <app-item
           *ngIf="counts() as counts; else showPlantWithoutCount"
