refactor plant to ingredient

--- a/src/app/about-modal/about-modal.component.html
+++ b/src/app/about-modal/about-modal.component.html
@@ -1,7 +1,7 @@
 <div class="about-modal-content">
   <h2>About This App</h2>
   <p>
-    This app contains about 50 generated Plants and 50 generated Potions. The
+    This app contains about 50 Plants and 50 Potions. The
     app is still a work in progress and a lot of potions effects, descriptions
     and images still need to be worked out.
   </p>
@@ -21,8 +21,8 @@
 
   <h3>Potion strength</h3>
   <p>
-    Potions come in four different strengths. Common plants craft weak potions
-    and the rare the plant the stronger the potion.
+    Potions come in four different strengths. The general strength of a potion
+    is based on the rarity of the ingredients.
   </p>
 
   <h3>Inventory</h3>
@@ -31,6 +31,21 @@
     by clicking on the backpack on the right side of the screen. Right now the
     backpack is only saved in the browser storage. Which means your inventory is
     linked to the device which you are using.
+  </p>
+
+  <h3>Sources</h3>
+  <p>
+    Some potion effects and descriptions are copied from the following sources:
+  </p>
+  <p>
+    <a href="https://dnd5e.wikidot.com/" target="_blank"
+      >https://dnd5e.wikidot.com/</a
+    >
+  </p>
+  <p>
+    <a href="https://www.dndbeyond.com/" target="_blank"
+      >https://www.dndbeyond.com/</a
+    >
   </p>
 
   <h3>Contributers</h3>
