--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -7,8 +7,8 @@
     <a routerLink="/gather" [class.active]="activeTab() === 'gather'"
       >Gather Herbs</a
     >
-    <a routerLink="/plants" [class.active]="activeTab() === 'plants'"
-      >Plant Compendium</a
+    <a routerLink="/ingredients" [class.active]="activeTab() === 'ingredients'"
+      >Ingredient Compendium</a
     >
     <a routerLink="/recipes" [class.active]="activeTab() === 'recipes'"
       >Concoction Catalog</a
