--- a/src/app/ui-components/backpack/backpack.component.scss
+++ b/src/app/ui-components/backpack/backpack.component.scss
@@ -42,7 +42,7 @@
     app-item {
       margin-right: 0.25rem;
     }
-    .plants,
+    .ingredients,
     .potions {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
