--- a/src/app/display-plants/display-ingredients.component.scss
+++ b/src/app/display-plants/display-ingredients.component.scss
@@ -1,4 +1,4 @@
-.plant-image,
+.ingredient-image,
 .rarity-image {
   &:hover {
     cursor: pointer;
@@ -9,26 +9,26 @@ table {
   // Set column widths to prevent overflow
   th:nth-child(1),
   td:nth-child(1) {
-    width: 10%; // Image column
+    width: 3%; // Image column
   }
 
   th:nth-child(2),
   td:nth-child(2) {
-    width: 15%; // Name column
+    width: 6%; // Name column
   }
 
   th:nth-child(3),
   td:nth-child(3) {
-    width: 25%; // Appearance column
+    width: 45%; // Appearance column
   }
 
   th:nth-child(4),
   td:nth-child(4) {
-    width: 12.5%; // Rarity column
+    width: 10%; // Rarity column
   }
 
   th:nth-child(5),
   td:nth-child(5) {
-    width: 12.5%; // Biome column
+    width: 10%; // Biome column
   }
 }
