--- a/src/app/display-recipes/display-recipes.component.scss
+++ b/src/app/display-recipes/display-recipes.component.scss
@@ -9,3 +9,37 @@ img {
 ul {
   display: flex;
 }
+
+table {
+  table-layout: fixed;
+  // Set column widths to prevent overflow
+  th:nth-child(1),
+  td:nth-child(1) {
+    width: 3%; // Image column
+  }
+
+  th:nth-child(2),
+  td:nth-child(2) {
+    width: 6%; // Name column
+  }
+
+  th:nth-child(3),
+  td:nth-child(3) {
+    width: 10%; // Ingredient column
+  }
+
+  th:nth-child(4),
+  td:nth-child(4) {
+    width: 20%; // Effect column
+  }
+
+  th:nth-child(5),
+  td:nth-child(5) {
+    width: 8%; // Strength column
+  }
+
+  th:nth-child(6),
+  td:nth-child(6) {
+    width: 8%; // Craftable column
+  }
+}
