--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -5,9 +5,9 @@
   margin: 20px auto;
   width: 80%;
   padding: $padding-medium;
-  border: 1px solid $light-gray;
-  border-radius: $large-border-radius;
-  box-shadow: $box-shadow;
+  // border: 1px solid $light-gray;
+  // border-radius: $large-border-radius;
+  // box-shadow: $box-shadow;
   background-color: $white;
   font-family: "Arial", sans-serif;
 }
@@ -59,12 +59,13 @@
 
 /* Tab Content */
 .tab-content {
-  border: 1px solid $light-gray;
+  // border: 1px solid $light-gray;
   border-radius: $border-radius;
   padding: $padding-medium;
   background-color: $white;
-  max-width: 800px;
+  max-width: 80%;
   margin: 0 auto;
+  box-shadow: $box-shadow;
 }
 
 .header {
