add Bob's potions

--- a/src/app/about-modal/about-modal.component.html
+++ b/src/app/about-modal/about-modal.component.html
@@ -1,9 +1,9 @@
 <div class="about-modal-content">
   <h2>About This App</h2>
   <p>
-    This app contains about 50 Plants and 50 Potions. The
-    app is still a work in progress and a lot of potions effects, descriptions
-    and images still need to be worked out.
+    This app contains about 50 Plants and 50 Potions. The app is still a work in
+    progress and a lot of potions effects, descriptions and images still need to
+    be worked out.
   </p>
 
   <h3>Plant rarity</h3>
@@ -49,7 +49,8 @@
   </p>
 
   <h3>Contributers</h3>
-  <p>Maikel Schils - Software Images Design</p>
+  <p>Maikel Schils - Software | Content | Images</p>
+  <p>Bob Barlag - Content</p>
   <p>For questions, contributions or reporting bugs please use Github</p>
   <p>
     <a href="https://github.com/Cheesedip/herbalist" target="_blank"
