--- a/src/app/about-modal/about-modal.component.html
+++ b/src/app/about-modal/about-modal.component.html
@@ -51,6 +51,8 @@
   <h3>Contributers</h3>
   <p>Maikel Schils - Software | Content | Images</p>
   <p>Bob Barlag - Content</p>
+
+  <h3>Contact</h3>
   <p>For questions, contributions or reporting bugs please use Github</p>
   <p>
     <a href="https://github.com/Cheesedip/herbalist" target="_blank"
