--- a/src/app/pages/plant-page/ingredient-page.component.html
+++ b/src/app/pages/plant-page/ingredient-page.component.html
@@ -5,7 +5,7 @@
       class="ingredient-image"
       [src]="ingredient.imageUrl"
       alt="{{ ingredient.name }}"
-      onerror="this.src='/assets/ingredients/todo.webp';"
+      onerror="this.src='/assets/plants/todo.webp';"
       loading="lazy"
     />
 
