move some files around and store most recent sorting in local storage

--- a/src/app/pages/gather-herbs/gather-herbs.component.html
+++ b/src/app/pages/gather-herbs/gather-herbs.component.html
@@ -48,5 +48,6 @@
   <app-display-ingredients
     *ngIf="gatheredPlants().length"
     [ingredients]="gatheredPlants()"
+    [sortingService]="sortingService"
   ></app-display-ingredients>
 </div>
