--- a/src/app/pages/plant-compendium/ingredient-compendium.component.html
+++ b/src/app/pages/plant-compendium/ingredient-compendium.component.html
@@ -32,4 +32,5 @@
 </div>
 <app-display-ingredients
   [ingredients]="filteredIngredients()"
+  [sortingService]="sortingService"
 ></app-display-ingredients>
