remember filter state in ingredient compendium and concoction catalog

--- a/src/app/pages/concoction-catalog/concoction-catalog.component.html
+++ b/src/app/pages/concoction-catalog/concoction-catalog.component.html
@@ -5,7 +5,8 @@
       <ng-select
         [items]="potionStrengths"
         multiple="true"
-        (change)="onStrengthChange($event)"
+        (ngModelChange)="onStrengthChange($event)"
+        [ngModel]="selectedStrengths()"
         closeOnSelect="false"
       >
       </ng-select>
